--- a/page.css
+++ b/page.css
@@ -418,6 +418,11 @@ ul li .nav-link{
         width: 150px;
         height: 350px;
     }
+    .animatedForm{
+        height: 300px;
+        width: 100%;
+        font-size: larger;
+    }
  }
  
  /* @media (max-width: 375px ) {
