--- a/page.css
+++ b/page.css
@@ -352,7 +352,7 @@ ul li .nav-link{
         margin-left: -100px;
     }
     .links{
-        margin-left: -1px;
+        margin-left: -px;
     }
     .unor{
         margin-left: -20px;
